infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: arisgani/auth:latest
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: auth-serv
spec:
  selector:
      app: auth   
  ports:
    - name: auth
      protocol: TCP  
      port: 3002
      targetPort: 3002
