infra/k8s/ticketing-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing
  template:
    metadata:
      labels:
        app: ticketing
    spec:
      containers:
        - name: ticketing
          image: arisgani/ticketing:latest
          imagePullPolicy: IfNotPresent   
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-serv
spec:
  selector:
    app: ticketing
  ports:
    - name: ticketing
      port: 3001
      protocol: TCP
      targetPort: 3001
