infra/k8s/ngnx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /api/auth/?(.*)
            backend: 
              serviceName: auth-serv
              servicePort: 3002    
          - path: /?(.*)    
            backend: 
              serviceName: frontend-serv
              servicePort: 3000
